syntax = "proto3";
option go_package = ".;authen_and_post";
package authen_and_post;

service AuthenticateAndPost {
  rpc CheckUserAuthentication(UserInfo) returns (UserResult) {}
  rpc CreateUser(UserDetailInfo) returns (UserResult) {}
  rpc EditUser(UserDetailInfo) returns (UserResult) {}
  rpc GetUserFollower(UserInfo) returns (UserFollower) {}
  rpc GetPostDetail(GetPostRequest) returns (Post) {}
  rpc UnFollowUser(UserFollowRequest) returns (BoolResp) {}
  rpc FollowUser(UserFollowRequest) returns (BoolResp) {}
  rpc CreatePost(PostRequest) returns (Post) {}
  rpc GetPostFriend(UserInfo) returns (PostFriend) {}
  rpc DeletePost(GetPostRequest) returns (TextResponse) {}
  rpc UpdatePost(Post) returns (Post) {}
  rpc CommentPost(CommentPostRequest) returns (BoolResp) {}
  rpc LikePost(LikePostRequest) returns (BoolResp) {}
}

message UserInfo {
  int64 user_id = 1;
  string user_name = 2;
  string user_password = 3;
}

message CommentPostRequest {
  int64 post_id = 1;
  string content = 2;
  int64 user_id = 3;
}

message UserDetailInfo {
  int64 user_id = 1;
  string user_name = 2;
  string first_name = 3;
  string last_name = 4;
  int64 dob = 5;
  string email = 6;
  string birth_day = 7;
  string password = 8;
}

message TextResponse {
  string message = 1;
}

enum UserStatus{
  OK = 0;
  NOT_FOUND = 1;
}

message UserResult {
  UserStatus status = 1;
  UserDetailInfo info = 2;
}

message UserFollower {
  repeated UserInfo followers = 1;
}

message GetPostRequest {
  int64 post_id = 1;
}

message UserFollowRequest {
  int64 user_id = 1;
  int64 friend_id = 2;
}

message Post {
  int64 post_id = 1;
  int64 user_id = 2;
  string content_text = 3;
  string content_image_path = 4;
  bool visible = 5;
  string created_at = 6;
}

message PostRequest {
  int64 user_id = 1;
  string content_text = 2;
  string content_image_path = 3;
  bool visible = 4;
  string created_at = 5;
}

message PostFriend {
  repeated Post posts = 1;
}

message LikePostRequest {
  enum LikePostStatus {
    DISLIKE = 0;
    LIKE = 1;
  }

  int64 post_id = 1;
  int64 user_id = 2;
  LikePostStatus status = 3;
}

message BoolResp {
  bool result = 1;
}

